Added Struct types
